issues#17 add constructor